# Logger

./: CMakeLists.txt  Log.cpp  Log.h  Logger.cpp  Logger.h  README.md  log.txt  main.cpp
Logger/: Logger.cpp  Logger.h
LoggerSinks/: LoggerSink.h
LoggerSinks/implementations/: ConsoleFileSink.cpp  ConsoleFileSink.h  ConsoleSink.cpp  ConsoleSink.h  FileSink.cpp  FileSink.h  StubSink.h
implementation/: ConsoleLogger.h  FileLogger.h  StubLogger.h
